--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .shopping-bag-header{
     margin: 0 auto;
     height: 80px;
@@ -16,7 +18,62 @@
         white-space: nowrap;
         width: fit-content;
 
+      
+
     }
 
    
 }
+
+
+.checkout-page {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    margin: 0 auto;
+    max-width: 1300px;
+
+    @include mobile{
+        flex-direction: column;
+    }
+  }
+  
+  .shopping-bag {
+    flex: 1;
+    margin-right: 0px;
+  }
+  
+  .shopping-bag-right{
+    width: 31%;
+
+    @include mobile{
+        width: 100%;
+    }
+  }
+  
+  .order-summary {
+    min-width: 200px;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    padding: 0 24px;
+  }
+  
+  .product {
+    display: flex;
+    justify-content: space-between;
+
+    @include mobile{
+        flex-direction: column;
+        margin: 20px 0;
+    }
+  }
+  
+  .product-image img {
+    width: 150px;
+  }
+  
+  .product-details {
+    flex: 1;
+    padding-left: 20px;
+  }
+  
