--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -35,6 +35,10 @@
 
     @include mobile{
         flex-direction: column;
+        max-width: 100vw;
+        padding-right: 24px;
+        padding-left: 24px;
+        box-sizing: border-box;
     }
   }
   
