--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -117,16 +117,62 @@ $font-family: 'Arial', sans-serif;
     .box {
       margin-top: 10px;
 
-      &.size-attribute {
+      &.size-attribute{
         font-weight: bold;
+
+        @include mobile{
+            grid-column: 1 / 4;
+            width: 100%;
+        }
+
+        &-value{
+          @include mobile{
+            grid-row: 2;
+            grid-column: 1 / 4;
+          }
+        }
+
+        &-price{
+          @include mobile{
+            display: none;
+          }
+        }
       }
 
       &.frame-attribute {
         font-weight: bold;
+        @include mobile{
+          grid-column: 1 / 3;
+        }
+
+        &-value{
+          @include mobile{
+            grid-row: 4;
+            grid-column: 1 / 4;
+          }
+        }
+
+        &-price{
+            @include mobile{
+              
+            }
+        }
       }
 
       &.lens-attribute {
         font-weight: bold;
+
+        @include mobile{
+          grid-column: 1 / 3;
+        }
+
+        &-value{
+          @include mobile{
+            grid-row: 6;
+            grid-column: 1 / 4;
+          }
+          
+        }
       }
 
       &.frame-attribute-value,
@@ -134,7 +180,7 @@ $font-family: 'Arial', sans-serif;
         color: $price-color;
       }
 
-      &.frame-attribute-price {
+      &.frame-attribute-price , &.lens-attribute-price {
         display: flex;
         flex-direction: row;
         align-items: center;
