--- a/src/styles/CartButton.scss
+++ b/src/styles/CartButton.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .cart-button-container{
     padding: 0;
     margin-top: 15px;
@@ -5,6 +7,10 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+
+    @include mobile{
+        min-height: 0;
+    }
     
 
     .button-checkout{
