--- a/src/styles/Product.scss
+++ b/src/styles/Product.scss
@@ -34,15 +34,17 @@ $font-family: 'Arial', sans-serif;
 
     @include mobile{
       flex-direction: row;
-
       justify-content: start;
-      margin: 8% 0 0;
-
+      min-height: 140px;
     }
 
     .img-container{
       width: 35%;
       border-right: 1px solid #bfbfbf;
+
+      @include mobile{
+        border: 0;
+      }
     }
 
     img {
@@ -70,6 +72,9 @@ $font-family: 'Arial', sans-serif;
         left: 0;
         bottom: 0;
         padding: 0;
+        font-size: 12px;
+        letter-spacing: .24px;
+        line-height: 24px;
       }
     }
   }
@@ -79,6 +84,12 @@ $font-family: 'Arial', sans-serif;
     grid-template-columns: 25% 50% 20%; 
     grid-gap: 10px;
     margin-top: 15px;
+
+    @include mobile{
+      border-top: 1px solid #bfbfbf;
+      padding: 0 24px 20px;
+      row-gap: 0;
+    }
 
     .main-info {
       grid-column: span 2; /* Occupa entrambe le colonne */
@@ -96,6 +107,8 @@ $font-family: 'Arial', sans-serif;
         span{
           font-size: 20px;
           line-height: 24px;
+
+          
         }
       }
 
@@ -105,6 +118,9 @@ $font-family: 'Arial', sans-serif;
         display: flex;
         flex-direction: row;
         align-items: center;
+
+        
+        
         .list-price{
           color: #7b7b7b;
           text-decoration: line-through;
@@ -115,7 +131,7 @@ $font-family: 'Arial', sans-serif;
     }
 
     .box {
-      margin-top: 10px;
+      margin-top: 5px;
 
       &.size-attribute{
         font-weight: bold;
@@ -123,12 +139,31 @@ $font-family: 'Arial', sans-serif;
         @include mobile{
             grid-column: 1 / 4;
             width: 100%;
+            font-size: 14px;
+            font-weight: 400;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.14;
+            letter-spacing: normal;
+            text-align: left;
+            color: #000;
+            padding-top: 16px;
         }
 
         &-value{
           @include mobile{
             grid-row: 2;
             grid-column: 1 / 4;
+            font-size: 14px;
+            font-weight: 400;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.14;
+            letter-spacing: normal;
+            text-align: left;
+            color: #6d6d6d;
+            width: 100%;
+            text-transform: capitalize;
           }
         }
 
@@ -143,12 +178,31 @@ $font-family: 'Arial', sans-serif;
         font-weight: bold;
         @include mobile{
           grid-column: 1 / 3;
+          font-size: 14px;
+          font-weight: 400;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.14;
+          letter-spacing: normal;
+          text-align: left;
+          color: #000;
+          padding-top: 16px;
         }
 
         &-value{
           @include mobile{
             grid-row: 4;
             grid-column: 1 / 4;
+            font-size: 14px;
+            font-weight: 400;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.14;
+            letter-spacing: normal;
+            text-align: left;
+            color: #6d6d6d;
+            width: 100%;
+            text-transform: capitalize;
           }
         }
 
@@ -164,12 +218,31 @@ $font-family: 'Arial', sans-serif;
 
         @include mobile{
           grid-column: 1 / 3;
+          font-size: 14px;
+          font-weight: 400;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.14;
+          letter-spacing: normal;
+          text-align: left;
+          color: #000;
+          padding-top: 16px;
         }
 
         &-value{
           @include mobile{
             grid-row: 6;
             grid-column: 1 / 4;
+            font-size: 14px;
+            font-weight: 400;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.14;
+            letter-spacing: normal;
+            text-align: left;
+            color: #6d6d6d;
+            width: 100%;
+            text-transform: capitalize;
           }
           
         }
@@ -188,6 +261,19 @@ $font-family: 'Arial', sans-serif;
         margin-right: 1.5rem;
         justify-content: flex-end;
         
+        @include mobile{
+          font-size: 14px;
+          font-weight: 400;
+          font-stretch: normal;
+          font-style: normal;
+          line-height: 1.14;
+          letter-spacing: normal;
+          text-align: left;
+          color: #6d6d6d;
+          width: 100%;
+          text-transform: capitalize;
+        }
+        
 
         .original-price {
           color: #7b7b7b;
@@ -199,6 +285,11 @@ $font-family: 'Arial', sans-serif;
         .offer-price {
           color: #7b7b7b;
           font-size: 18px; /* Dimensione dell'offerta */
+
+          @include mobile{
+            line-height: 1.14;
+            font-size: 14px;
+          }
         }
       }
     }
@@ -268,6 +359,9 @@ $font-family: 'Arial', sans-serif;
 
     @include mobile{
       padding: 16px 24px;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
     }
 
     div{
@@ -286,31 +380,38 @@ $font-family: 'Arial', sans-serif;
   }
 
   .main-info-mobile {
-     margin-left: 10px;
-     width: 65%;
+      padding-left: 10px;
+      width: 65%;
+      padding-top: 16px;
+      padding-bottom: 18px;
+      border-left: 1px solid #bfbfbf;
 
     .model-name {
       font-family: $font-family;
-      font-weight: bold;
-      font-size: 1.5em; /* Aumenta la dimensione del font */
+      
 
       span{
-        font-size: 20px;
+        font-size: 14px; 
         line-height: 24px;
       }
     }
 
     .total-price {
-      font-size: 1.2em;
+      font-size: 14px;
       color: $price-color;
       display: flex;
       flex-direction: row;
       align-items: center;
+
       .list-price{
         color: #7b7b7b;
         text-decoration: line-through;
         font-size: 14px;
         margin-right: 8px;
+      }
+
+      .offer-price{
+        color: #000;
       }
     }
   }
@@ -335,6 +436,23 @@ $font-family: 'Arial', sans-serif;
       @include mobile{
         padding: 16px 24px;
         margin: 0;
+
+        .view-button-container{
+          display: flex;
+          flex-direction: row;
+          gap: 5px;
+          align-items: center;
+
+          .view-image{
+            width: 24px;
+            height: 10px;
+            position: relative;
+            top: -7px;
+          }
+          .view-text{
+            text-transform: uppercase;
+          }
+        }
       }
 
     .remove-container {
@@ -361,8 +479,11 @@ $font-family: 'Arial', sans-serif;
       gap: 4px;
       align-items: center;
       display: flex;
-      padding: 16px 24px;
+      padding: 14px 24px;
       border-top: 1px solid #bfbfbf;
+      font-size: 14px;
+      line-height: 18px;
+      text-decoration: underline;
       
   
       &:hover {
