--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -63,8 +63,8 @@ header {
   .nav__link {
     text-decoration: none;
     color: black;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 13px;
+    font-weight: 700;
     padding: 5px 10px;
   }
   
